rendered all pages dynamically with htmx

--- a/static/portfolio.html
+++ b/static/portfolio.html
@@ -1,139 +1,4 @@
-<!Doctype html>
-<html class="no-js" lang="zxx">
 
-
-<!-- Mirrored from bostami-bootstrap.ibthemespro.com/bostami-template/portfolio-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Mar 2024 05:36:15 GMT -->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Bostami - Portfolio Two Page</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-    <link rel="stylesheet" href="assets/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/odometer.min.css">
-    <link rel="stylesheet" href="assets/css/meanmenu.css">
-    <link rel="stylesheet" href="assets/css/swipper.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-</head>
-
-<body>
-
-    <div class="page-wrapper page-wrapper-2" data-background="assets/img/bg/page-bg-1.jpg">
-
-        <!-- PRELOADER -->
-        <div id="preloader">
-            <div class="loader_line"></div>
-        </div>
-        <!-- /PRELOADER -->
-
-        <!-- header-start -->
-        <div class="bostami-header-area mb-80 z-index-5">
-            <div class="container">
-                <div class="bostami-header-wrap main-style-2">
-                    <div class="row">
-
-                        <!-- logo -->
-                        <div class="col-lg-2 col-md-6 col-sm-4 col-4 d-flex align-items-center">
-                            <div class="bostami-header-logo">
-                                <a class="site-logo" href="https://bostami-bootstrap.ibthemespro.com/index.html">
-                                    <img src="assets/img/logo/logo-2.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <!-- menu btn -->
-                        <div class="col-lg-10 col-md-6 col-sm-8 col-8">
-                            <div class="header-right-flex">
-                                <div class="bostami-main-menu-wrap ">
-                                    <nav class="bastami-main-menu main_menu_2">
-                                        <ul>
-                                            <li>
-                                                <a href="home-2.html">
-                                                    <span>
-
-                                                        <i class="fa-light fa-house"></i>
-                                                    </span>
-                                                    home
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="about-2.html">
-                                                    <span>
-                                                        <i class="fa-light fa-address-card"></i>
-                                                    </span>
-                                                    about
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="resume-2.html">
-                                                    <span>
-                                                        <i class="fa-light fa-file-user"></i>
-                                                    </span>
-                                                    Resume
-                                                </a>
-                                            </li>
-                                            <li class="active">
-                                                <a href="portfolio-2.html">
-                                                    <span>
-                                                        <i class="fa-light fa-briefcase"></i>
-                                                    </span>
-                                                    Works
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="blog-2.html">
-                                                    <span>
-                                                        <i class="fa-light fa-newspaper"></i>
-                                                    </span>
-                                                    Blogs
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="contact-2.html">
-                                                    <span>
-                                                        <i class="fa-light fa-address-book"></i>
-                                                    </span>
-                                                    contact
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                                <div class="bostami-header-menu-btn text-right ml-30">
-                                    <div class="dark-btn dark-btn-2">
-                                        <i class="fa-light fa-moon dark-btn-icon"></i>
-                                        <i class="fa-light fa-sun dark-btn-icon"></i>
-                                    </div>
-                                    <div class="menu-btn-wrap d-lg-none">
-                                        <div class="menu-btn menu-btn-2 toggle_menu">
-                                            <span></span>
-                                            <span></span>
-                                            <span></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- mobile menu -->
-                <div class="mobile-menu-wrap">
-                    <div class="mobile-menu mobile_menu_2">
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- header-end -->
 
         <div class="bostami-page-area z-index-3">
             <div class="container">
@@ -170,7 +35,7 @@
                                     <div class="isotop-item mockup logo">
                                         <div class="fillter-item bg-prink">
                                             <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-1">
-                                                <img src="assets/img/work/work-img-1.png" alt="">
+                                                <img src="/img/work/work-img-1.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
                                             <h6 class="item-title">
@@ -184,7 +49,7 @@
                                     <div class=" isotop-item design mockup">
                                         <div class="fillter-item bg-catkrill">
                                             <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-1">
-                                                <img src="assets/img/work/work-img-2.png" alt="">
+                                                <img src="/img/work/work-img-2.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
                                             <h6 class="item-title">
@@ -198,7 +63,7 @@
                                     <div class=" isotop-item logo mockup">
                                         <div class="fillter-item bg-catkrill ">
                                             <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-1">
-                                                <img src="assets/img/work/work-img-3.png" alt="">
+                                                <img src="/img/work/work-img-3.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
                                             <h6 class="item-title">
@@ -212,7 +77,7 @@
                                     <div class=" isotop-item mockup">
                                         <div class="fillter-item bg-prink">
                                             <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-1">
-                                                <img src="assets/img/work/work-img-4.png" alt="">
+                                                <img src="/img/work/work-img-4.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
                                             <h6 class="item-title">
@@ -226,7 +91,7 @@
                                     <div class="isotop-item design logo">
                                         <div class="fillter-item bg-prink">
                                             <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-1">
-                                                <img src="assets/img/work/work-img-5.png" alt="">
+                                                <img src="/img/work/work-img-5.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
                                             <h6 class="item-title">
@@ -240,7 +105,7 @@
                                     <div class="isotop-item mockup design">
                                         <div class="fillter-item bg-catkrill">
                                             <a class="img" href="#" data-bs-toggle="modal" data-bs-target="#portfolio-1">
-                                                <img src="assets/img/work/work-img-6.png" alt="">
+                                                <img src="/img/work/work-img-6.png" alt="">
                                             </a>
                                             <span class="item-subtitle">Travel Landing , UX/UI </span>
                                             <h6 class="item-title">
@@ -331,7 +196,7 @@
 
                         </div>
                         <div class="h1-modal-img">
-                            <img src="assets/img/work/portfolio-modal-img-1.jpg" alt="">
+                            <img src="/img/work/portfolio-modal-img-1.jpg" alt="">
                         </div>
 
                     </div>
@@ -341,21 +206,3 @@
         </div>
 
         <!-- portfolio-modal-end -->
-
-    </div>
-
-    <!-- JS here -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/swipper-bundle.min.js"></script>
-    <script src="assets/js/jquery.meanmenu.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/odometer.min.js"></script>
-    <script src="assets/js/appear.min.js"></script>
-    <script src="assets/js/main.js"></script>
-</body>
-
-
-<!-- Mirrored from bostami-bootstrap.ibthemespro.com/bostami-template/portfolio-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Mar 2024 05:36:23 GMT -->
-</html>
